syntax = "proto3";

message GameInfo {
    string game_id = 1;
    string game_name = 2;
    uint32 game_type = 3;
    string icon_url = 4;
    uint32 player_num = 5;
    string package_link = 6;
    string package_size = 7;
    string game_link = 8;
    uint32 mark = 9;
    string apple_id = 10;
    string bundle_id = 11;
    string schema_url = 12;
    repeated string game_pic = 13;
    string launch_component = 15;
    string andr_pk_name = 16;
}
