syntax = "proto3";

message RecommendGame {
    string game_id = 1;
    string game_name = 2;
    uint32 game_type = 3;
    string icon_url = 4;
    string secret_key = 5;
    uint32 player_num = 6;
    string package_link = 7;
    string package_size = 8;
    string game_link = 9;
    uint32 mark = 10;
    string apple_id = 11;
    string bundle_id = 12;
    string schema_url = 13;
    repeated string game_pic = 14;
    string introduce = 15;
    string launch_component = 16;
    string andr_pk_name = 17;
    uint32 day_downloads = 18;
    string superscript_color = 19;
    uint32 star = 20;
    uint32 category_id = 21;
    string category_name = 22;
    string version = 23;
    uint64 deadline = 24;
    string editor_rec = 25;
}
