syntax = "proto3";

message NewGameInfo {
    uint64 id = 1;
    string game_id = 2;
    string server_id = 3;
    string server_name = 4;
    int32 server_open_time = 5;
    int32 server_type = 6;
    int32 time = 7;
    string gift_code = 8;
    string game_link = 9;
    string praise = 10;
    string test_userids = 11;
    string game_desc = 12;
    repeated string game_pic = 13;
    string game_name = 14;
    string developer = 15;
    repeated string recommend_platform = 16;
    string package_name = 17;
    string sign = 18;
    string launchComponent = 19;
    string package_size = 20;
    string apple_id = 21;
    string bundle_id = 22;
    string schema_url = 23;
    string app_id = 24;
    string canvas_name = 25;
    string thread_forum_name = 26;
    string forum_name = 27;
    string icon_pic1 = 28;
    string icon_pic2 = 29;
    string icon_pic3 = 30;
    string secret_key = 31;
    uint64 thread_theme_id = 32;
    uint64 thread_id = 33;
    int32 score = 35;
    string api_key = 42;
    string inter_version = 43;
    string version_ios = 44;
    string subscript_color = 46;
    int32 category_id = 47;
    int32 status = 48;
    int32 mark = 49;
    string package_link = 50;
    string andr_pk_name = 51;
    string category_name = 52;
    string icon_url = 53;
    string category_name_sim = 54;
}
